# document_benchmark

./: .gitignore  README.md  comparison.py  data_structure.py  main.py  paddle_ocr_test.py  paddleocr_layout_det.py  pdf_extractor.py  pdf_extractor_paddleocr.py  pdf_page_to_image.py  pyproject.toml
data/pdf/output/: example_1.json  example_1_comp.json
