[project]
name = "document-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "paddleocr[doc-parser]>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
]
